Sat Dec 27 10:08:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:

	  Cosmetic fixes to align with coding standards. I have not done
	  the entire file. I am gettingtired of doing this.

Sat Dec 27 09:59:34 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/CONV_FRAMEA.h:
	* tao/CurrentA.h:
	* tao/IIOPA.h:
	* tao/IIOP_EndpointsA.h:
	* tao/IOP_IORA.h:

	  Some pieces that should have been generated that were missing.

Sat Dec 27 09:17:37 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/LoadBalancing/GenericFactory/Manage_Object_Group/LB_server.cpp:

	  Fixed warnings with g++.
	
	* orbsvcs/tests/LoadBalancing/GenericFactory/Manage_Object_Group/Makefile: 

	  Needed IORManip library. 
	
	* orbsvcs/tests/LoadBalancing/GenericFactory/Manage_Object_Group/Manage_Object_Group.mpc:
	  Fixed  a typo in the MPC file.

Sat Dec 27 09:13:14 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/Makefile:
	* orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/server.bor:
	* orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/Makefile:
	* orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/server.bor:
	* orbsvcs/tests/LoadBalancing/LoadMonitor/CPU/Makefile:
	* orbsvcs/tests/LoadBalancing/LoadMonitor/CPU/Makefile.bor:
	* orbsvcs/tests/Miop/McastHello/Makefile:
	* orbsvcs/tests/Miop/McastHello/server.bor:

	  They need the IORManipulation library to be linked in.

Sat Dec 27 09:05:09 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/LoadBalancer/LoadManager.bor:
	* orbsvcs/LoadBalancer/LoadMonitor.bor:
	* orbsvcs/LoadBalancer/Makefile.LoadManager:
	* orbsvcs/LoadBalancer/Makefile.LoadMonitor:
	  
	  They need the IORManipulation library to be linked in.

Sat Dec 27 08:51:39 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
