@@ -1,3 +1,10 @@
+Sat Dec 27 10:14:00 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:
+
+	  Dealt with VC6 idiosyncracies. VC6 never scopes variables inside
+	  for loops. 
+
 Sat Dec 27 10:08:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:
